--- a/readme.html
+++ b/readme.html
@@ -1,6 +1,6 @@
-# <a href="https://l24.im/Fwkn">CASİBOM GİRİŞ TIKLA</a>
+<a href="https://l24.im/Fwkn">CASİBOM GİRİŞ TIKLA</a>
 
 <a href="https://l24.im/Fwkn"><img src="https://resmim.net/cdn/2024/10/07/mQocaj.png" alt="resim yükle" border="0" /></a>
 
-# Casibom Güncellenen Giriş Adresine Bu Linkten Tiklayarak Giriş Sağlayabilirsiniz.
+Casibom Güncellenen Giriş Adresine Bu Linkten Tiklayarak Giriş Sağlayabilirsiniz.
 Casibom spor bahisleri ve casino oyunları sunan dünyanın en seçkin kumar platformu. Casibom giriş yaparak kazanmaya hemen başlayın.
